# SeetaFace-modify

./: README.md  SeetaFaceEngine的安装与测试.docx
FaceAlignment/: CMakeLists.txt  filelist.txt
FaceAlignment/src/test/: face_alignment_test.cpp
FaceDetection/: CMakeLists.txt  filelist.txt
FaceDetection/src/test/: facedetection_test.cpp
FaceIdentification/: CMakeLists.txt  null.txt
FaceIdentification/dat/: zhaoliying.list
FaceIdentification/data/test_face_recognizer/: zhaoliying.txt
FaceIdentification/model/: README.txt
FaceIdentification/src/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt  compressto.h  flann_search.cpp  flann_search.cpp.bak  picsearch.h  test_face_feature.cpp  test_face_feature.cpp.bak  test_face_recognizer.cpp  test_face_verification.cpp
FaceIdentification/tools/: face_identification.cpp
